--- a/_includes/codeRepoGroups.html
+++ b/_includes/codeRepoGroups.html
@@ -17,13 +17,15 @@
                                 {% assign repo_url =  release.repositoryURL[page.lang] | remove: "https://"  | split: "/" %}
                                 {% assign repo_size =  repo_url | size %}
                                 {% if repo_size == 3  %}
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[0] | append: "/" |  append: repo_url[1]  %}
-                                    {% assign grp_url =  repo_url[0] | append: "/" |  append: repo_url[1]  %}
+
+                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign grp_url =  repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign repo_array = repo_array | push: org_url%}
                                     {% assign groups_array = groups_array | push: grp_url %}
                                     {% elsif repo_size == 4  %}
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[0] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[2]  %}
-                                    {% assign grp_url =  repo_url[0] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[2] %}
+                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign grp_url =  repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0] %}
+
                                     {% assign repo_array = repo_array | push: org_url %}
                                     {% assign groups_array = groups_array | push: grp_url %}
                                 {% endif %}
@@ -33,14 +35,16 @@
                 {% endfor %}
             {% endfor %}
 
-            {% assign repo_array = repo_array | uniq  %}
-            {% assign groups_array = groups_array | uniq %}
+
+            {% assign repo_array = repo_array | sort_natural | uniq  %}
+            {% assign groups_array = groups_array | sort_natural | uniq %}
             {% for grp in groups_array %}
             {% assign grp_name = grp | split: "/" %}
                 {% if grp_name.size == 2  %}
-                    <a href="{{"https://"| append: grp}}" target="_blank">{{grp_name[1]}}</a>
+                    <a href="{{"https://"| append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
                 {% elsif grp_name.size == 3  %}
-                    <a href="{{"https://"| append: grp}}" target="_blank">{{grp_name[2]}}</a>
+                    <a href="{{"https://"| append: grp_name[2] | append: "/" |  append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
+
                 {%endif%}   
                 {% for repo in repo_array %}
                 {% assign org_name =  repo | split: "/" %}
@@ -73,13 +77,15 @@
                                 {% assign repo_url =  release.repositoryURL[page.lang] | remove: "https://"  | split: "/" %}
                                 {% assign repo_size =  repo_url | size %}
                                 {% if repo_size == 3  %}
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[0] | append: "/" |  append: repo_url[1]  %}
-                                    {% assign grp_url =  repo_url[0] | append: "/" |  append: repo_url[1]  %}
+
+                                     {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign grp_url =  repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign repo_array = repo_array | push: org_url%}
                                     {% assign groups_array = groups_array | push: grp_url %}
                                     {% elsif repo_size == 4  %}
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[0] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[2]  %}
-                                    {% assign grp_url =  repo_url[0] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[2] %}
+                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign grp_url =  repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0] %}
+
                                     {% assign repo_array = repo_array | push: org_url %}
                                     {% assign groups_array = groups_array | push: grp_url %}
                                 {% endif %}
@@ -88,15 +94,17 @@
                     {% endfor %}
                 {% endfor %}
             {% endfor %}
-            
-            {% assign repo_array = repo_array | uniq  %}
-            {% assign groups_array = groups_array | uniq %}
+
+
+            {% assign repo_array = repo_array | sort_natural | uniq  %}
+            {% assign groups_array = groups_array | sort_natural | uniq %}
             {% for grp in groups_array %}
             {% assign grp_name = grp | split: "/" %}
                 {% if grp_name.size == 2  %}
-                    <a href="{{"https://"| append: grp}}" target="_blank">{{grp_name[1]}}</a>
+                    <a href="{{"https://"| append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
                 {% elsif grp_name.size == 3  %}
-                    <a href="{{"https://"| append: grp}}" target="_blank">{{grp_name[2]}}</a>
+                    <a href="{{"https://"| append: grp_name[2] | append: "/" |  append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
+
                 {%endif%}   
                 {% for repo in repo_array %}
                 {% assign org_name =  repo | split: "/" %}
@@ -129,13 +137,15 @@
                                 {% assign repo_url =  release.repositoryURL[page.lang] | remove: "https://"  | split: "/" %}
                                 {% assign repo_size =  repo_url | size %}
                                 {% if repo_size == 3  %}
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[0] | append: "/" |  append: repo_url[1]  %}
-                                    {% assign grp_url =  repo_url[0] | append: "/" |  append: repo_url[1]  %}
+
+                                     {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign grp_url =  repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign repo_array = repo_array | push: org_url%}
                                     {% assign groups_array = groups_array | push: grp_url %}
                                     {% elsif repo_size == 4  %}
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[0] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[2]  %}
-                                    {% assign grp_url =  repo_url[0] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[2] %}
+                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign grp_url =  repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0] %}
+
                                     {% assign repo_array = repo_array | push: org_url %}
                                     {% assign groups_array = groups_array | push: grp_url %}
                                 {% endif %}
@@ -145,14 +155,16 @@
                 {% endfor %}
             {% endfor %}
 
-            {% assign repo_array = repo_array | uniq  %}
-            {% assign groups_array = groups_array | uniq %}
+
+            {% assign repo_array = repo_array | sort_natural | uniq  %}
+            {% assign groups_array = groups_array | sort_natural | uniq %}
             {% for grp in groups_array %}
             {% assign grp_name = grp | split: "/" %}
                 {% if grp_name.size == 2  %}
-                    <a href="{{"https://"| append: grp}}" target="_blank">{{grp_name[1]}}</a>
+                    <a href="{{"https://"| append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
                 {% elsif grp_name.size == 3  %}
-                    <a href="{{"https://"| append: grp}}" target="_blank">{{grp_name[2]}}</a>
+                    <a href="{{"https://"| append: grp_name[2] | append: "/" |  append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
+
                 {%endif%}   
                 {% for repo in repo_array %}
                 {% assign org_name =  repo | split: "/" %}
