--- a/_includes/form/loop.html
+++ b/_includes/form/loop.html
@@ -29,7 +29,7 @@
     {%- when 'relatedCode' -%}
       {% include form/presets/relatedCode.html id=idPreset -%}
     {%- when 'schemaVersion' -%}
-      {% include form/presets/schemaVersion.html id=idPreset -%}
+      <!-- schemaVersion -->
     {%- when 'status' -%}
       {% include form/presets/status.html id=idPreset -%}
     {%- when 'submitter' -%}
