--- a/_includes/form/presets/selectStandard.html
+++ b/_includes/form/presets/selectStandard.html
@@ -1,4 +1,4 @@
-{% assign title = "standardCode" -%}
+{% assign title = "standardAcronym" -%}
 {% assign group = "select" -%}
 <div class="form-group">
   {% include form/components/label-group.html id=include.id title=title group=group required=false %}
@@ -6,7 +6,7 @@
     <option value="">&nbsp;</option>
     {%- for standards in site.data.normes_ouvertes-open_standards -%}
       {%- assign standard = standards[1] %}
-      <option value="{{ standard.standardCode }}">{{ standard.standardCode }}</option>
+      <option value="{{ standard.standardAcronym }}">{{ standard.standardAcronym }}</option>
     {%- endfor %}
   </select>
 </div>
