--- a/_includes/form/loop.html
+++ b/_includes/form/loop.html
@@ -12,11 +12,13 @@
   {%- assign file = formGroup.widget -%}
 {%- endif -%}
 
+{%- if name != 'empty' -%}
 <div class="form-element">
   <div class="form-element-{{ type }}{% if formGroup.param.more %} form-group-more{% endif %}" id="formgroup_{{ type }}_{{ formGroup.param.prepend }}{{ name }}">
 {%- capture path -%}form/{{ type }}/{{ file }}.html{%- endcapture -%}
 {%- include {{ path }} param=formGroup.param id=id idPreset=include.idPreset title=name fields=formGroup.fields -%}
   </div>
 </div>
+{%- endif -%}
 
 {% endfor %}
