--- a/_includes/schema/presets/description.html
+++ b/_includes/schema/presets/description.html
@@ -1,1 +1,19 @@
-{%- include schema/components/li-i18n.html id="presets" title="description" -%}
+<li>
+  <details open>
+    <summary> description
+      {%- if include.required == nil or include.required %} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span>{% endif %} [array]
+    </summary>
+    <h5>{{ site.data.i18n.form.presets.description.label.schema[page.lang] }}</h5>
+    <p>{{ site.data.i18n.form.presets.description.title[page.lang] }}</p>
+    <h5>{{ site.data.i18n.form.presets.description.label.what.subtitle[page.lang] }} </h5>
+      <ul>
+        <li>{{ site.data.i18n.form.presets.description.titles.en[page.lang] }}{% if include.required == nil or include.required %} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span>{% endif %} [{{ include.type | default: "string" }}]</li>
+        <li>{{ site.data.i18n.form.presets.description.titles.fr[page.lang] }}{% if include.required == nil or include.required %} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span>{% endif %} [{{ include.type | default: "string" }}]</li>
+      </ul>
+    <h5>{{ site.data.i18n.form.presets.description.label.how.subtitle[page.lang] }} </h5>
+      <ul>
+        <li>{{ site.data.i18n.form.presets.description.titles.en[page.lang] }} [{{ include.type | default: "string" }}]</li>
+        <li>{{ site.data.i18n.form.presets.description.titles.fr[page.lang] }} [{{ include.type | default: "string" }}]</li>
+      </ul>
+  </details>
+</li>
