--- a/_includes/schema/presets/languages.html
+++ b/_includes/schema/presets/languages.html
@@ -1,1 +1,7 @@
-{%- include schema/components/li.html id=include.id title="languages" type="array" required=false -%}
+<li>
+  <details open>
+    <summary>languages [array]</summary>
+    <h5>{{ site.data.i18n.form[include.id].languages.title[page.lang] }}</h5>
+    <p>{{ site.data.i18n.form[include.id].languages.label[page.lang] }}</p>
+  </details>
+</li>
