--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,6 +49,7 @@
 {%- if page.ref == "codeForm" -%}
 <script src="../assets/js/src/adminForm.js"></script>
 <script src="../assets/js/src/codeForm.js"></script>
+<script src="../assets/js/src/autocomplete-input-spdx.js"></script>
 {%- endif -%}
 {%- if page.ref == "standardsForm" -%}
 <script src="../assets/js/src/adminForm.js"></script>
@@ -57,6 +58,7 @@
 {%- if page.ref == "ossForm" -%}
 <script src="../assets/js/src/adminForm.js"></script>
 <script src="../assets/js/src/ossForm.js"></script>
+<script src="../assets/js/src/autocomplete-input-spdx.js"></script>
 {%- endif %}
 <script>
   const REPO_NAME = "{{ site.github_repository }}";
