--- a/_includes/form/presets/licenses.html
+++ b/_includes/form/presets/licenses.html
@@ -2,11 +2,15 @@
 <div class="add-more-group" id="addMore{{ title }}" data-title="{{ title }}">
 {% include form/components/title.html id=include.id title=title -%}
 <div class="add-more-content">
-<div class="form-group" autocomplete="off">
+<div class="form-group">
     {% include form/components/label-group.html id=include.id title=title group="spdxID" %}
-    <div class="autocomplete" style="width:300px;">
-      <input class="form-control" id="{{ title }}spdxID" name="{{ title }}spdxID" type="text" placeholder="License" required="required">
-    </div>
+    <select class="form-control" id="{{ title }}spdxID" name="{{ title }}spdxID" required="required">
+      <option value="">&nbsp;</option>
+      {%- for licenses in site.data.i18n.licenses -%}
+      {%- assign license = licenses[1] %}
+      <option value="{{ license.value }}">{{ license.value }}</option>
+      {%- endfor %}
+    </select>
   </div>
 {% include form/components/group-i18n-group.html id=include.id title=title group="URL" type="url" -%}
 </div>
