--- a/_includes/form/presets/description.html
+++ b/_includes/form/presets/description.html
@@ -9,6 +9,6 @@
 <div class="col-sm-6">
 <h3>{{ site.data.i18n.form.presets.description.labels.how.subtitle[page.lang] }} </h3>
 <p><small style="font-size: 11.4px">{{ site.data.i18n.form.presets.description.charactersLimit[page.lang] }}</small></p>
-{%- include form/components/textarea-i18n.html id=include.idPreset title=title group="how" required=false -%}
+{%- include form/components/textarea-i18n.html id=include.idPreset title=title group="how" param=site.data.forms.param.required_false -%}
 </div>
 </div>
